fixed share modal overflow

--- a/client/src/assets/css/list_shared.scss
+++ b/client/src/assets/css/list_shared.scss
@@ -321,7 +321,8 @@
 }
 @media all and ( min-width: 376px ) and (max-width: 480px) {
     .share-instruction{
-        left: 5%;
+        font-size: 1.4rem;
+        left: 10%;
     }
     .shared-list-title{
         font-size: 1.5rem;
@@ -339,5 +340,15 @@
 @media all and ( min-width: 480px ) and ( max-width: 584px ){
     .item-name{
         font-size: 1.1rem;
+    }
+    .share-instruction{
+        font-size: 1.15rem;
+    }
+}
+
+@media all and (max-width: 900px){
+    .share-instruction{
+        font-size: 1.5rem;
+        left: 10%;
     }
 }
