--- a/client/src/assets/css/user_settings.css
+++ b/client/src/assets/css/user_settings.css
@@ -45,9 +45,28 @@
     cursor: pointer;
 }
 
+@media all and (max-width: 1100px) {
+    .user-modal-content {
+        width: 60%;
+        height: 50%;
+    }
+    main{
+        position: relative;
+        top: 40px;
+    }
+}
+
+@media all and (max-width: 600px) {
+    .user-modal-content {
+        width: 80%;
+        height: 50%;
+    }
+}
+
 @media all and (max-width: 480px) {
     .user-modal-content {
         width: 100%;
         height: 50%;
     }
 }
+
